--- a/proyecto-daw/css/registro.css
+++ b/proyecto-daw/css/registro.css
@@ -3,10 +3,7 @@
 }
 
 .tamanio-contain {
-    width: 100%;
-    max-width: 500px;
-    min-width: 300px;
-    margin: 10em 2em;
+    display: none;
 }
 
 .usuario-datos {
